[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# path と version を両方指定することで、workspace での開発時にが
# path に従って workspace 内の source code を参照し、
# `crates.io` 経由で main を使用する際には version 指定に従って
# sub を取得するようになります。
sub = {path = "../sub", version = "0.1.0"}
